--- a/source/app/blueprints/case/templates/modal_add_case_event.html
+++ b/source/app/blueprints/case/templates/modal_add_case_event.html
@@ -111,7 +111,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="form-group col-12">
-                                        <label for="event_assets">Link to Evidence
+                                        <label for="event_assets">Link to evidence
                                         </label>
                                         <div class="select2-input ml-12" data-select2-id="6">
                                             <select id="event_evidence" name="event_evidence" class="form-control select2-hidden-accessible ml-12" multiple="" data-select2-id="event_evidence" tabindex="-1" aria-hidden="true" style="width: 100%">
