--- a/source/app/blueprints/case/templates/modal_help_filter_tm.html
+++ b/source/app/blueprints/case/templates/modal_help_filter_tm.html
@@ -13,6 +13,7 @@
                                 <p>The following target elements can be used to filter :</p>
                                 <ul>
                                     <li><code>asset</code>: Asset linked to the event</li>
+                                    <li><code>evidence</code>: Evidence linked to the event</li>
                                     <li><code>ioc</code>: IOC linked to the event</li>
                                     <li><code>tag</code>: Tag within the event</li>
                                     <li><code>title</code>: Title of the event</li>
